2008-02-27  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (do_read): Stop reading if seek fails.

2008-02-26  John W. Eaton  <jwe@octave.org>

	* ov-base-int.cc (octave_base_int_helper,
	octave_base_int_helper_traits): New templates and specializations.
	(octave_base_int_matrix<T>::convert_to_str_internal,
	octave_base_int_matrix<T>::convert_to_str_internal): Use them.

	* DLD-FUNCTIONS/rand.cc (do_rand): Pass name of calling function
	to octave_rand::state.

	* variables.cc (bind_ans): Handle cs-lists recursively.

	* ov-cs-list.h, ov-cs-list.cc (octave_cs_list::print,
	octave_cs_list::print_raw): Delete.

2008-02-25  John W. Eaton  <jwe@octave.org>

	* Cell.cc (Cell::map): New function.
	* Cell.h (Cell::map): Declare.
	(xisalnum, xisalpha, xisascii, xiscntrl, xisdigit,
	xisgraph, xislower, xisprint, xispunct, xisspace, xisupper,
	xisxdigit, xtoascii, xtolower, xtoupper): New mapper functions.
	(ctype_mapper): New private typedef.

	* ov-cell.h (xisalnum, xisalpha, xisascii, xiscntrl, xisdigit,
	xisgraph, xislower, xisprint, xispunct, xisspace, xisupper,
	xisxdigit, xtoascii, xtolower, xtoupper): New mapper functions.

2008-02-25  Michael Goffioul  <michael.goffioul@gmail.com>

	* ov-scalar.cc (octave_scalar::round): Use xround instead of ::round
	in mapper implementation.

2008-02-25  John W. Eaton  <jwe@octave.org>

	* ov-base.cc (UNDEFINED_MAPPER, STRING_MAPPER): New macros.  Use
	them to define mapper functions.

	* mappers.cc (Fisalnum, Fisalpha, Fisascii, Fiscntrl, Fisdigit,
	Fisgraph, Fislower, Fisprint, Fispunct, Fisspace, Fisupper,
	Fisxdigit, Ftoascii, Ftolower, Ftoupper):
	Use DEFUNX to define ctype mapper functions.
	Use new function names.

	* ov-base.h, ov-base.cc, ov-str-mat.h, ov-str-mat.cc:
	Prepend x to ctype mapper function names.

	* graphics.h.in (row_vector_property::row_vector_property):
	Set default constraints here.
	(row_vector_property::add_constraint): New function.
	(row_vector_property::validate): Delete decl.